extra fix messager overflow

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -46,6 +46,7 @@ html {
 }
 
 #messager {
+  overflow: hidden;
   width: 300px;
   height: 400px;
   background-color: white;
